--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "nem2-sdk": "^0.16.5",
     "restify": "^8.5.1",
+    "restify-cors-middleware": "^1.1.1",
     "restify-errors": "^8.0.2",
     "sqlite3": "^4.1.1",
     "winston": "^3.2.1"
