--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node-dev index.js",
-    "test": "jest",
-    "hoge": "jest test/DataClass.test.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
