--- a/server/package.json
+++ b/server/package.json
@@ -21,18 +21,18 @@
   "homepage": "https://github.com/planethouki/symbol-tx-relayer#readme",
   "dependencies": {
     "async": "^3.2.0",
-    "aws-sdk": "^2.635.0",
+    "aws-sdk": "^2.848.0",
     "dotenv": "^8.2.0",
-    "nem2-sdk": "^0.16.5",
     "restify": "^8.5.1",
     "restify-cors-middleware": "^1.1.1",
     "restify-errors": "^8.0.2",
-    "sqlite3": "^4.1.1",
-    "winston": "^3.2.1"
+    "sqlite3": "^5.0.2",
+    "symbol-sdk": "^0.23.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "jest": "^25.1.0",
-    "node-dev": "^4.0.0"
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "jest": "^26.6.3",
+    "node-dev": "^6.2.0"
   }
 }
