--- a/client/.env.sample
+++ b/client/.env.sample
@@ -1,2 +1,2 @@
-SERVER_URL=https://5kxe60w7r6.execute-api.ap-northeast-1.amazonaws.com/relayer
-NODE_URL=https://test-api.48gh23s.xyz:3001
+SERVER_URL=http://localhost:8765
+NODE_URL=http://api-01.ap-northeast-1.testnet.symboldev.network:3000
