--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run generate"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -26,6 +28,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.20.0",
-    "eslint-plugin-nuxt": ">=2.0.0"
+    "eslint-plugin-nuxt": ">=2.0.0",
+    "gh-pages": "^3.1.0"
   }
 }
