--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "predeploy": "npm run generate"
   },
   "dependencies": {
+    "@nuxtjs/google-gtag": "^1.0.4",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
