--- a/client/.env.sample
+++ b/client/.env.sample
@@ -1,5 +1,5 @@
 SERVER_URL=http://localhost:8765
-FETCH_NODE_URL=http://api-01.ap-northeast-1.testnet.symboldev.network:3000
-LINK_NODE_URL=http://api-01.ap-northeast-1.testnet.symboldev.network:3000
+FETCH_NODE_URL=https://dg0nbr5d1ohfy.cloudfront.net:443
+LINK_NODE_URL=https://dg0nbr5d1ohfy.cloudfront.net:443
 GTAG=
 GTAG_DOMAIN=
